--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,16 +5,17 @@ colorama==0.4.4
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.1
-flask-mongoengine==1.0.0
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+greenlet==1.1.2
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
-mongoengine==0.23.1
 pycparser==2.20
 PyJWT==2.1.0
 python-dotenv==0.19.0
 six==1.16.0
+SQLAlchemy==1.4.25
 Werkzeug==2.0.1
 WTForms==2.3.3
