--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.4
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.1
+Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.2
