--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.24.0",
+    "mobx": "^6.3.6",
+    "mobx-react": "^7.2.1",
+    "mobx-state-tree": "^5.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.0",
@@ -18,6 +21,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-tiny-popover": "^7.0.1",
+    "react-toastify": "^8.1.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
