--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+awesome-slugify==1.6.5
 bcrypt==3.2.0
 cffi==1.14.6
 click==8.0.1
@@ -17,9 +18,9 @@ Pillow==8.4.0
 pycparser==2.20
 PyJWT==2.1.0
 python-dotenv==0.19.0
+regex==2021.11.10
 six==1.16.0
 SQLAlchemy==1.4.25
+Unidecode==0.4.21
 Werkzeug==2.0.1
-WTForms==2.3.3
-.0.1
 WTForms==2.3.3
