--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "mobx": "^6.3.6",
     "mobx-react": "^7.2.1",
     "mobx-state-tree": "^5.0.4",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.0",
